// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmazonConnectContentStack > Matches the snapshot > Create hierarchy 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AmazonConnectHierarchyGroupStackNestedStackAmazonConnectHierarchyGroupStackNestedStackResource3C4DFE15": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.us-east-1.",
              {
                "Ref": "AWS::URLSuffix",
              },
              "/cdk-hnb659fds-assets-000000000000-us-east-1/f4c7192531e2169c783120481af23169ff2567236f1d9551c00ccb6f2ba5bce0.json",
            ],
          ],
        },
      },
      "Type": "AWS::CloudFormation::Stack",
      "UpdateReplacePolicy": "Delete",
    },
    "DepartmentUserHierarchyStructure": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "UserHierarchyStructure": {
          "LevelOne": {
            "HierarchyLevelId": "division",
            "Name": "Division",
          },
          "LevelThree": {
            "HierarchyLevelId": "team",
            "Name": "Team",
          },
          "LevelTwo": {
            "HierarchyLevelId": "department",
            "Name": "Department",
          },
        },
      },
      "Type": "AWS::Connect::UserHierarchyStructure",
    },
    "HoursOfOperationapactokyosales": {
      "Properties": {
        "Config": [
          {
            "Day": "MONDAY",
            "EndTime": {
              "Hours": 18,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 10,
              "Minutes": 0,
            },
          },
          {
            "Day": "TUESDAY",
            "EndTime": {
              "Hours": 18,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 10,
              "Minutes": 0,
            },
          },
          {
            "Day": "WEDNESDAY",
            "EndTime": {
              "Hours": 18,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 10,
              "Minutes": 0,
            },
          },
          {
            "Day": "THURSDAY",
            "EndTime": {
              "Hours": 18,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 10,
              "Minutes": 0,
            },
          },
          {
            "Day": "FRIDAY",
            "EndTime": {
              "Hours": 18,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 10,
              "Minutes": 0,
            },
          },
        ],
        "Description": "Sales department hours (Japan Tokyo)",
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "APAC Tokyo Sales Business Hours",
        "TimeZone": "Asia/Tokyo",
      },
      "Type": "AWS::Connect::HoursOfOperation",
    },
    "HoursOfOperationeucentralsales": {
      "Properties": {
        "Config": [
          {
            "Day": "MONDAY",
            "EndTime": {
              "Hours": 16,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
          {
            "Day": "TUESDAY",
            "EndTime": {
              "Hours": 16,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
          {
            "Day": "WEDNESDAY",
            "EndTime": {
              "Hours": 16,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
          {
            "Day": "THURSDAY",
            "EndTime": {
              "Hours": 16,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
          {
            "Day": "FRIDAY",
            "EndTime": {
              "Hours": 16,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
        ],
        "Description": "Sales department hours (EU Central)",
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "EU Central Sales Business Hours",
        "TimeZone": "Europe/Berlin",
      },
      "Type": "AWS::Connect::HoursOfOperation",
    },
    "HoursOfOperationeucentralsupport": {
      "Properties": {
        "Config": [
          {
            "Day": "MONDAY",
            "EndTime": {
              "Hours": 19,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 7,
              "Minutes": 0,
            },
          },
          {
            "Day": "TUESDAY",
            "EndTime": {
              "Hours": 19,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 7,
              "Minutes": 0,
            },
          },
          {
            "Day": "WEDNESDAY",
            "EndTime": {
              "Hours": 19,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 7,
              "Minutes": 0,
            },
          },
          {
            "Day": "THURSDAY",
            "EndTime": {
              "Hours": 19,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 7,
              "Minutes": 0,
            },
          },
          {
            "Day": "FRIDAY",
            "EndTime": {
              "Hours": 19,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 7,
              "Minutes": 0,
            },
          },
        ],
        "Description": "Support department hours (EU Central)",
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "EU Central Support Business Hours",
        "TimeZone": "Europe/Berlin",
      },
      "Type": "AWS::Connect::HoursOfOperation",
    },
    "HoursOfOperationuseastsales": {
      "Properties": {
        "Config": [
          {
            "Day": "MONDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
          {
            "Day": "TUESDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
          {
            "Day": "WEDNESDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
          {
            "Day": "THURSDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
          {
            "Day": "FRIDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
        ],
        "Description": "Sales department hours (US East)",
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "US East Sales Business Hours",
        "TimeZone": "America/New_York",
      },
      "Type": "AWS::Connect::HoursOfOperation",
    },
    "HoursOfOperationuseastsupport": {
      "Properties": {
        "Config": [
          {
            "Day": "MONDAY",
            "EndTime": {
              "Hours": 20,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
          {
            "Day": "TUESDAY",
            "EndTime": {
              "Hours": 20,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
          {
            "Day": "WEDNESDAY",
            "EndTime": {
              "Hours": 20,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
          {
            "Day": "THURSDAY",
            "EndTime": {
              "Hours": 20,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
          {
            "Day": "FRIDAY",
            "EndTime": {
              "Hours": 20,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
        ],
        "Description": "Support department hours (US East)",
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "US East Support Business Hours",
        "TimeZone": "America/New_York",
      },
      "Type": "AWS::Connect::HoursOfOperation",
    },
    "Queuequeueapactokyosales": {
      "Properties": {
        "Description": "Inbound sales calls for Japan (Tokyo)",
        "HoursOfOperationArn": {
          "Fn::GetAtt": [
            "HoursOfOperationapactokyosales",
            "HoursOfOperationArn",
          ],
        },
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "APAC Tokyo Sales Queue",
      },
      "Type": "AWS::Connect::Queue",
    },
    "Queuequeueeucentralsales": {
      "Properties": {
        "Description": "Inbound sales calls for EU Central region",
        "HoursOfOperationArn": {
          "Fn::GetAtt": [
            "HoursOfOperationeucentralsales",
            "HoursOfOperationArn",
          ],
        },
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "EU Central Sales Queue",
      },
      "Type": "AWS::Connect::Queue",
    },
    "Queuequeueeucentralsupportother": {
      "Properties": {
        "Description": "Inbound support calls for other inquiries (EU Central)",
        "HoursOfOperationArn": {
          "Fn::GetAtt": [
            "HoursOfOperationeucentralsupport",
            "HoursOfOperationArn",
          ],
        },
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "EU Central Support Other Queue",
      },
      "Type": "AWS::Connect::Queue",
    },
    "Queuequeueeucentralsupportproductinfo": {
      "Properties": {
        "Description": "Inbound support calls for product information (EU Central)",
        "HoursOfOperationArn": {
          "Fn::GetAtt": [
            "HoursOfOperationeucentralsupport",
            "HoursOfOperationArn",
          ],
        },
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "EU Central Support Product Info Queue",
      },
      "Type": "AWS::Connect::Queue",
    },
    "Queuequeueuseastsales": {
      "Properties": {
        "Description": "Inbound sales calls for US East region",
        "HoursOfOperationArn": {
          "Fn::GetAtt": [
            "HoursOfOperationuseastsales",
            "HoursOfOperationArn",
          ],
        },
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "US East Sales Queue",
      },
      "Type": "AWS::Connect::Queue",
    },
    "Queuequeueuseastsupportother": {
      "Properties": {
        "Description": "Inbound support calls for other inquiries (US East)",
        "HoursOfOperationArn": {
          "Fn::GetAtt": [
            "HoursOfOperationuseastsupport",
            "HoursOfOperationArn",
          ],
        },
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "US East Support Other Queue",
      },
      "Type": "AWS::Connect::Queue",
    },
    "Queuequeueuseastsupportproductinfo": {
      "Properties": {
        "Description": "Inbound support calls for product information (US East)",
        "HoursOfOperationArn": {
          "Fn::GetAtt": [
            "HoursOfOperationuseastsupport",
            "HoursOfOperationArn",
          ],
        },
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "US East Support Product Info Queue",
      },
      "Type": "AWS::Connect::Queue",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`AmazonConnectContentStack > Matches the snapshot > Create hierarchy 2`] = `
{
  "Resources": {
    "Root0SalesDivision": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Sales Division",
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root0SalesDivision0DomesticDepartment": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Domestic Department",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root0SalesDivision",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root0SalesDivision0DomesticDepartment0TeamA": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Team A",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root0SalesDivision0DomesticDepartment",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root0SalesDivision0DomesticDepartment1TeamB": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Team B",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root0SalesDivision0DomesticDepartment",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root0SalesDivision1InternationalDepartment": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "International Department",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root0SalesDivision",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root0SalesDivision1InternationalDepartment0TeamC": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Team C",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root0SalesDivision1InternationalDepartment",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root0SalesDivision1InternationalDepartment1TeamD": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Team D",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root0SalesDivision1InternationalDepartment",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root0SalesDivision1InternationalDepartment2TeamE": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Team E",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root0SalesDivision1InternationalDepartment",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root1SupportDivision": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Support Division",
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root1SupportDivision0TechnicalDepartment": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Technical Department",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root1SupportDivision",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root1SupportDivision0TechnicalDepartment0TeamF": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Team F",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root1SupportDivision0TechnicalDepartment",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root1SupportDivision1CustomerDepartment": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Customer Department",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root1SupportDivision",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root1SupportDivision1CustomerDepartment0TeamG": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Team G",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root1SupportDivision1CustomerDepartment",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
    "Root1SupportDivision1CustomerDepartment1TeamH": {
      "Properties": {
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "Team H",
        "ParentGroupArn": {
          "Fn::GetAtt": [
            "Root1SupportDivision1CustomerDepartment",
            "UserHierarchyGroupArn",
          ],
        },
      },
      "Type": "AWS::Connect::UserHierarchyGroup",
    },
  },
}
`;

exports[`AmazonConnectContentStack > Matches the snapshot > Not create hierarchy 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "HoursOfOperationapactokyosales": {
      "Properties": {
        "Config": [
          {
            "Day": "MONDAY",
            "EndTime": {
              "Hours": 18,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 10,
              "Minutes": 0,
            },
          },
          {
            "Day": "TUESDAY",
            "EndTime": {
              "Hours": 18,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 10,
              "Minutes": 0,
            },
          },
          {
            "Day": "WEDNESDAY",
            "EndTime": {
              "Hours": 18,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 10,
              "Minutes": 0,
            },
          },
          {
            "Day": "THURSDAY",
            "EndTime": {
              "Hours": 18,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 10,
              "Minutes": 0,
            },
          },
          {
            "Day": "FRIDAY",
            "EndTime": {
              "Hours": 18,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 10,
              "Minutes": 0,
            },
          },
        ],
        "Description": "Sales department hours (Japan Tokyo)",
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "APAC Tokyo Sales Business Hours",
        "TimeZone": "Asia/Tokyo",
      },
      "Type": "AWS::Connect::HoursOfOperation",
    },
    "HoursOfOperationeucentralsales": {
      "Properties": {
        "Config": [
          {
            "Day": "MONDAY",
            "EndTime": {
              "Hours": 16,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
          {
            "Day": "TUESDAY",
            "EndTime": {
              "Hours": 16,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
          {
            "Day": "WEDNESDAY",
            "EndTime": {
              "Hours": 16,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
          {
            "Day": "THURSDAY",
            "EndTime": {
              "Hours": 16,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
          {
            "Day": "FRIDAY",
            "EndTime": {
              "Hours": 16,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
        ],
        "Description": "Sales department hours (EU Central)",
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "EU Central Sales Business Hours",
        "TimeZone": "Europe/Berlin",
      },
      "Type": "AWS::Connect::HoursOfOperation",
    },
    "HoursOfOperationeucentralsupport": {
      "Properties": {
        "Config": [
          {
            "Day": "MONDAY",
            "EndTime": {
              "Hours": 19,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 7,
              "Minutes": 0,
            },
          },
          {
            "Day": "TUESDAY",
            "EndTime": {
              "Hours": 19,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 7,
              "Minutes": 0,
            },
          },
          {
            "Day": "WEDNESDAY",
            "EndTime": {
              "Hours": 19,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 7,
              "Minutes": 0,
            },
          },
          {
            "Day": "THURSDAY",
            "EndTime": {
              "Hours": 19,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 7,
              "Minutes": 0,
            },
          },
          {
            "Day": "FRIDAY",
            "EndTime": {
              "Hours": 19,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 7,
              "Minutes": 0,
            },
          },
        ],
        "Description": "Support department hours (EU Central)",
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "EU Central Support Business Hours",
        "TimeZone": "Europe/Berlin",
      },
      "Type": "AWS::Connect::HoursOfOperation",
    },
    "HoursOfOperationuseastsales": {
      "Properties": {
        "Config": [
          {
            "Day": "MONDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
          {
            "Day": "TUESDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
          {
            "Day": "WEDNESDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
          {
            "Day": "THURSDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
          {
            "Day": "FRIDAY",
            "EndTime": {
              "Hours": 17,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 9,
              "Minutes": 0,
            },
          },
        ],
        "Description": "Sales department hours (US East)",
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "US East Sales Business Hours",
        "TimeZone": "America/New_York",
      },
      "Type": "AWS::Connect::HoursOfOperation",
    },
    "HoursOfOperationuseastsupport": {
      "Properties": {
        "Config": [
          {
            "Day": "MONDAY",
            "EndTime": {
              "Hours": 20,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
          {
            "Day": "TUESDAY",
            "EndTime": {
              "Hours": 20,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
          {
            "Day": "WEDNESDAY",
            "EndTime": {
              "Hours": 20,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
          {
            "Day": "THURSDAY",
            "EndTime": {
              "Hours": 20,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
          {
            "Day": "FRIDAY",
            "EndTime": {
              "Hours": 20,
              "Minutes": 0,
            },
            "StartTime": {
              "Hours": 8,
              "Minutes": 0,
            },
          },
        ],
        "Description": "Support department hours (US East)",
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "US East Support Business Hours",
        "TimeZone": "America/New_York",
      },
      "Type": "AWS::Connect::HoursOfOperation",
    },
    "Queuequeueapactokyosales": {
      "Properties": {
        "Description": "Inbound sales calls for Japan (Tokyo)",
        "HoursOfOperationArn": {
          "Fn::GetAtt": [
            "HoursOfOperationapactokyosales",
            "HoursOfOperationArn",
          ],
        },
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "APAC Tokyo Sales Queue",
      },
      "Type": "AWS::Connect::Queue",
    },
    "Queuequeueeucentralsales": {
      "Properties": {
        "Description": "Inbound sales calls for EU Central region",
        "HoursOfOperationArn": {
          "Fn::GetAtt": [
            "HoursOfOperationeucentralsales",
            "HoursOfOperationArn",
          ],
        },
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "EU Central Sales Queue",
      },
      "Type": "AWS::Connect::Queue",
    },
    "Queuequeueeucentralsupportother": {
      "Properties": {
        "Description": "Inbound support calls for other inquiries (EU Central)",
        "HoursOfOperationArn": {
          "Fn::GetAtt": [
            "HoursOfOperationeucentralsupport",
            "HoursOfOperationArn",
          ],
        },
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "EU Central Support Other Queue",
      },
      "Type": "AWS::Connect::Queue",
    },
    "Queuequeueeucentralsupportproductinfo": {
      "Properties": {
        "Description": "Inbound support calls for product information (EU Central)",
        "HoursOfOperationArn": {
          "Fn::GetAtt": [
            "HoursOfOperationeucentralsupport",
            "HoursOfOperationArn",
          ],
        },
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "EU Central Support Product Info Queue",
      },
      "Type": "AWS::Connect::Queue",
    },
    "Queuequeueuseastsales": {
      "Properties": {
        "Description": "Inbound sales calls for US East region",
        "HoursOfOperationArn": {
          "Fn::GetAtt": [
            "HoursOfOperationuseastsales",
            "HoursOfOperationArn",
          ],
        },
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "US East Sales Queue",
      },
      "Type": "AWS::Connect::Queue",
    },
    "Queuequeueuseastsupportother": {
      "Properties": {
        "Description": "Inbound support calls for other inquiries (US East)",
        "HoursOfOperationArn": {
          "Fn::GetAtt": [
            "HoursOfOperationuseastsupport",
            "HoursOfOperationArn",
          ],
        },
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "US East Support Other Queue",
      },
      "Type": "AWS::Connect::Queue",
    },
    "Queuequeueuseastsupportproductinfo": {
      "Properties": {
        "Description": "Inbound support calls for product information (US East)",
        "HoursOfOperationArn": {
          "Fn::GetAtt": [
            "HoursOfOperationuseastsupport",
            "HoursOfOperationArn",
          ],
        },
        "InstanceArn": "arn:aws:connect:us-east-1:000000000000:instance/00000000-0000-0000-0000-000000000000",
        "Name": "US East Support Product Info Queue",
      },
      "Type": "AWS::Connect::Queue",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
